pkg/cl/y.output
State 0 conflicts: 1 shift/reduce
State 86 conflicts: 1 shift/reduce
State 89 conflicts: 1 shift/reduce
State 99 conflicts: 1 shift/reduce
State 179 conflicts: 1 shift/reduce
State 250 conflicts: 1 shift/reduce
State 298 conflicts: 1 shift/reduce
State 359 conflicts: 2 shift/reduce


Grammar

    0 $accept: block $end

    1 block: /* empty */
    2      | '.' NL

    3 @1: /* empty */

    4 block: block @1 debug xstmt
    5      | script_params
    6      | script_body
    7      | error NL

    8 debug: /* empty */

    9 @2: /* empty */

   10 debug: D_XXX EOST @2 debug

   11 D_XXX: D_D
   12      | D_PEEK Y_CONSTANT
   13      | '~'

   14 script_params: proc_stmt var_decls begin_stmt

   15 @3: /* empty */

   16 script_body: begin_stmt @3 s_list opnl end_stmt

   17 @4: /* empty */

   18 proc_stmt: Y_PROCEDURE @4 param bparam_list EOST

   19 bparam_list: /* empty */
   20            | LP param_list RP

   21 param_list: /* empty */
   22           | xparam_list

   23 xparam_list: param
   24            | xparam_list DELIM param

   25 var_decls: /* empty */
   26          | var_decl_block

   27 var_decl_block: var_decl_line
   28               | var_decl_block var_decl_line

   29 var_decl_line: EOST
   30              | var_decl_stmt
   31              | error NL

   32 @5: /* empty */

   33 var_decl_stmt: typedefs @5 var_decl_list EOST

   34 typedefs: Y_BOOL
   35         | Y_STRING
   36         | Y_REAL
   37         | Y_FILE
   38         | Y_GCUR
   39         | Y_IMCUR
   40         | Y_UKEY
   41         | Y_PSET
   42         | Y_INT
   43         | Y_STRUCT

   44 var_decl_list: var_decl_plus
   45              | var_decl_plus DELIM var_decl_list

   46 var_decl_plus: var_decl
   47              | var_decl '{' options_list ';' '}'

   48 var_decl: var_def

   49 @6: /* empty */

   50 var_decl: var_def '=' @6 init_list

   51 var_def: var_name

   52 @7: /* empty */

   53 var_def: var_name @7 '[' init_index_list ']'

   54 var_name: param
   55         | '*' param

   56 init_index_list: /* empty */
   57                | init_index_range
   58                | init_index_list DELIM init_index_range

   59 init_index_range: const
   60                 | const ':' const

   61 init_list: init_elem
   62          | init_list DELIM init_elem

   63 init_elem: const
   64          | Y_CONSTANT LP const RP

   65 const: Y_CONSTANT
   66      | number

   67 number: sign Y_CONSTANT

   68 sign: '+'
   69     | '-'

   70 options_list: init_list DELIM options
   71             | init_list
   72             | options

   73 options: option
   74        | options DELIM option

   75 option: Y_IDENT '=' const

   76 begin_stmt: Y_BEGIN NL

   77 expr: expr0
   78     | ref

   79 expr0: expr1
   80      | Y_CONSTANT
   81      | Y_GCUR
   82      | Y_IMCUR
   83      | Y_UKEY
   84      | Y_PSET

   85 expr1: LP expr RP
   86      | expr '+' opnl expr
   87      | expr '-' opnl expr
   88      | expr '*' opnl expr
   89      | expr '/' opnl expr
   90      | expr YOP_POW opnl expr
   91      | expr '%' opnl expr
   92      | expr YOP_CONCAT opnl expr
   93      | expr '<' opnl expr
   94      | expr '>' opnl expr
   95      | expr YOP_LE opnl expr
   96      | expr YOP_GE opnl expr
   97      | expr YOP_EQ opnl expr
   98      | expr YOP_NE opnl expr
   99      | expr YOP_OR opnl expr
  100      | expr YOP_AND opnl expr
  101      | YOP_NOT expr
  102      | '-' expr

  103 @8: /* empty */

  104 expr1: Y_SCAN LP @8 scanarg RP

  105 @9: /* empty */

  106 expr1: Y_SCANF LP @9 scanfmt DELIM scanarg RP

  107 @10: /* empty */

  108 expr1: Y_FSCAN LP @10 scanarg RP

  109 @11: /* empty */

  110 expr1: Y_FSCANF LP Y_IDENT DELIM @11 scanfmt DELIM scanarg RP

  111 @12: /* empty */

  112 expr1: intrinsx LP @12 intrarg RP

  113 intrinsx: intrins
  114         | Y_INT
  115         | Y_REAL

  116 scanfmt: expr

  117 scanarg: /* empty */
  118        | Y_IDENT
  119        | Y_IDENT DELIM scanarg

  120 intrarg: /* empty */
  121        | expr
  122        | intrarg DELIM expr

  123 stmt: c_stmt
  124     | assign EOST
  125     | cmdlist EOST
  126     | immed EOST
  127     | inspect EOST
  128     | osesc EOST
  129     | popstk EOST
  130     | if
  131     | ifelse
  132     | while
  133     | for
  134     | switch
  135     | case
  136     | default
  137     | next EOST
  138     | break EOST
  139     | goto EOST
  140     | return EOST
  141     | label_stmt
  142     | nullstmt

  143 c_stmt: c_blk
  144       | c_blk NL

  145 @13: /* empty */

  146 @14: /* empty */

  147 c_blk: '{' @13 s_list opnl @14 '}'

  148 s_list: /* empty */
  149       | s_list opnl xstmt

  150 assign: ref equals expr0
  151       | ref equals ref

  152 @15: /* empty */

  153 assign: ref @15 assign_oper expr

  154 equals: '='

  155 assign_oper: YOP_AOADD
  156            | YOP_AOSUB
  157            | YOP_AOMUL
  158            | YOP_AODIV
  159            | YOP_AOCAT

  160 @16: /* empty */

  161 cmdlist: command @16 cmdpipe

  162 cmdpipe: /* empty */

  163 @17: /* empty */

  164 cmdpipe: cmdpipe pipe @17 command

  165 pipe: '|' opnl
  166     | Y_ALLPIPE opnl

  167 @18: /* empty */

  168 @19: /* empty */

  169 command: tasknam @18 BARG @19 args EARG

  170 @20: /* empty */

  171 args: DELIM @20 arglist
  172     | arglist

  173 arglist: arg
  174        | arglist DELIM arg

  175 arg: /* empty */
  176    | expr0
  177    | ref
  178    | ref '=' expr0
  179    | ref '=' ref
  180    | param '+'
  181    | param '-'
  182    | '<' file
  183    | '>' file
  184    | Y_ALLREDIR file
  185    | Y_APPEND file
  186    | Y_ALLAPPEND file
  187    | Y_GSREDIR file

  188 file: expr0
  189     | param

  190 immed: equals expr0
  191      | equals ref

  192 inspect: ref equals

  193 osesc: Y_OSESC

  194 popstk: equals

  195 if: if_stat

  196 @21: /* empty */

  197 if_stat: Y_IF LP expr RP @21 opnl xstmt

  198 @22: /* empty */

  199 ifelse: if_stat Y_ELSE @22 opnl xstmt

  200 @23: /* empty */

  201 @24: /* empty */

  202 while: Y_WHILE LP @23 expr RP @24 opnl xstmt

  203 @25: /* empty */

  204 @26: /* empty */

  205 @27: /* empty */

  206 for: Y_FOR LP opnl xassign ';' opnl @25 xexpr ';' opnl @26 xassign RP opnl @27 stmt

  207 xassign: assign
  208        | /* empty */

  209 xexpr: expr
  210      | /* empty */

  211 @28: /* empty */

  212 switch: Y_SWITCH opnl LP opnl expr opnl RP opnl @28 xstmt

  213 @29: /* empty */

  214 @30: /* empty */

  215 case: Y_CASE @29 const_expr_list ':' opnl @30 xstmt

  216 @31: /* empty */

  217 default: Y_DEFAULT ':' opnl @31 xstmt

  218 next: Y_NEXT

  219 break: Y_BREAK

  220 return: Y_RETURN
  221       | Y_RETURN expr

  222 end_stmt: Y_END NL

  223 @32: /* empty */

  224 label_stmt: Y_IDENT ':' opnl @32 xstmt

  225 goto: Y_GOTO Y_IDENT

  226 nullstmt: ';'
  227         | ';' NL

  228 @33: /* empty */

  229 xstmt: @33 stmt
  230      | var_decl_stmt
  231      | error NL

  232 const_expr_list: const_expr
  233                | const_expr DELIM const_expr_list

  234 const_expr: Y_CONSTANT

  235 opnl: /* empty */
  236     | NL

  237 ref: param

  238 @34: /* empty */

  239 ref: param @34 '[' index_list ']'

  240 index_list: index

  241 @35: /* empty */

  242 index_list: index @35 DELIM index_list

  243 index: expr1
  244      | ref
  245      | '*'
  246      | Y_CONSTANT

  247 intrins: Y_IDENT

  248 param: Y_IDENT

  249 tasknam: Y_IDENT

  250 EOST: NL
  251     | ';'

  252 DELIM: ','

  253 BARG: /* empty */
  254     | LP

  255 EARG: /* empty */
  256     | RP

  257 LP: '('

  258 RP: ')'

  259 NL: Y_NEWLINE


Terminals, with rules where they appear

$end (0) 0
'%' (37) 91
'(' (40) 257
')' (41) 258
'*' (42) 55 88 245
'+' (43) 68 86 180
',' (44) 252
'-' (45) 69 87 102 181
'.' (46) 2
'/' (47) 89
':' (58) 60 215 217 224
';' (59) 47 206 226 227 251
'<' (60) 93 182
'=' (61) 50 75 154 178 179
'>' (62) 94 183
'[' (91) 53 239
']' (93) 53 239
'{' (123) 47 147
'|' (124) 165
'}' (125) 47 147
'~' (126) 13
error (256) 7 31 231
Y_SCAN (258) 104
Y_SCANF (259) 106
Y_FSCAN (260) 108
Y_FSCANF (261) 110
Y_OSESC (262) 193
Y_APPEND (263) 185
Y_ALLAPPEND (264) 186
Y_ALLREDIR (265) 184
Y_GSREDIR (266) 187
Y_ALLPIPE (267) 166
D_D (268) 11
D_PEEK (269) 12
Y_NEWLINE (270) 259
Y_CONSTANT (271) 12 64 65 67 80 234 246
Y_IDENT (272) 75 110 118 119 224 225 247 248 249
Y_WHILE (273) 202
Y_IF (274) 197
Y_ELSE (275) 199
Y_FOR (276) 206
Y_BREAK (277) 219
Y_NEXT (278) 218
Y_SWITCH (279) 212
Y_CASE (280) 215
Y_DEFAULT (281) 217
Y_RETURN (282) 220 221
Y_GOTO (283) 225
Y_PROCEDURE (284) 18
Y_BEGIN (285) 76
Y_END (286) 222
Y_BOOL (287) 34
Y_INT (288) 42 114
Y_REAL (289) 36 115
Y_STRING (290) 35
Y_FILE (291) 37
Y_STRUCT (292) 43
Y_GCUR (293) 38 81
Y_IMCUR (294) 39 82
Y_UKEY (295) 40 83
Y_PSET (296) 41 84
YOP_AOCAT (297) 159
YOP_AODIV (298) 158
YOP_AOMUL (299) 157
YOP_AOSUB (300) 156
YOP_AOADD (301) 155
YOP_OR (302) 99
YOP_AND (303) 100
YOP_NE (304) 98
YOP_EQ (305) 97
YOP_GE (306) 96
YOP_LE (307) 95
YOP_CONCAT (308) 92
UMINUS (309)
YOP_NOT (310) 101
YOP_POW (311) 90


Nonterminals, with rules where they appear

$accept (77)
    on left: 0
block (78)
    on left: 1 2 4 5 6 7, on right: 0 4
@1 (79)
    on left: 3, on right: 4
debug (80)
    on left: 8 10, on right: 4 10
@2 (81)
    on left: 9, on right: 10
D_XXX (82)
    on left: 11 12 13, on right: 10
script_params (83)
    on left: 14, on right: 5
script_body (84)
    on left: 16, on right: 6
@3 (85)
    on left: 15, on right: 16
proc_stmt (86)
    on left: 18, on right: 14
@4 (87)
    on left: 17, on right: 18
bparam_list (88)
    on left: 19 20, on right: 18
param_list (89)
    on left: 21 22, on right: 20
xparam_list (90)
    on left: 23 24, on right: 22 24
var_decls (91)
    on left: 25 26, on right: 14
var_decl_block (92)
    on left: 27 28, on right: 26 28
var_decl_line (93)
    on left: 29 30 31, on right: 27 28
var_decl_stmt (94)
    on left: 33, on right: 30 230
@5 (95)
    on left: 32, on right: 33
typedefs (96)
    on left: 34 35 36 37 38 39 40 41 42 43, on right: 33
var_decl_list (97)
    on left: 44 45, on right: 33 45
var_decl_plus (98)
    on left: 46 47, on right: 44 45
var_decl (99)
    on left: 48 50, on right: 46 47
@6 (100)
    on left: 49, on right: 50
var_def (101)
    on left: 51 53, on right: 48 50
@7 (102)
    on left: 52, on right: 53
var_name (103)
    on left: 54 55, on right: 51 53
init_index_list (104)
    on left: 56 57 58, on right: 53 58
init_index_range (105)
    on left: 59 60, on right: 57 58
init_list (106)
    on left: 61 62, on right: 50 62 70 71
init_elem (107)
    on left: 63 64, on right: 61 62
const (108)
    on left: 65 66, on right: 59 60 63 64 75
number (109)
    on left: 67, on right: 66
sign (110)
    on left: 68 69, on right: 67
options_list (111)
    on left: 70 71 72, on right: 47
options (112)
    on left: 73 74, on right: 70 72 74
option (113)
    on left: 75, on right: 73 74
begin_stmt (114)
    on left: 76, on right: 14 16
expr (115)
    on left: 77 78, on right: 85 86 87 88 89 90 91 92 93 94 95 96 97
    98 99 100 101 102 116 121 122 153 197 202 209 212 221
expr0 (116)
    on left: 79 80 81 82 83 84, on right: 77 150 176 178 188 190
expr1 (117)
    on left: 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102
    104 106 108 110 112, on right: 79 243
@8 (118)
    on left: 103, on right: 104
@9 (119)
    on left: 105, on right: 106
@10 (120)
    on left: 107, on right: 108
@11 (121)
    on left: 109, on right: 110
@12 (122)
    on left: 111, on right: 112
intrinsx (123)
    on left: 113 114 115, on right: 112
scanfmt (124)
    on left: 116, on right: 106 110
scanarg (125)
    on left: 117 118 119, on right: 104 106 108 110 119
intrarg (126)
    on left: 120 121 122, on right: 112 122
stmt (127)
    on left: 123 124 125 126 127 128 129 130 131 132 133 134 135 136
    137 138 139 140 141 142, on right: 206 229
c_stmt (128)
    on left: 143 144, on right: 123
c_blk (129)
    on left: 147, on right: 143 144
@13 (130)
    on left: 145, on right: 147
@14 (131)
    on left: 146, on right: 147
s_list (132)
    on left: 148 149, on right: 16 147 149
assign (133)
    on left: 150 151 153, on right: 124 207
@15 (134)
    on left: 152, on right: 153
equals (135)
    on left: 154, on right: 150 151 190 191 192 194
assign_oper (136)
    on left: 155 156 157 158 159, on right: 153
cmdlist (137)
    on left: 161, on right: 125
@16 (138)
    on left: 160, on right: 161
cmdpipe (139)
    on left: 162 164, on right: 161 164
@17 (140)
    on left: 163, on right: 164
pipe (141)
    on left: 165 166, on right: 164
command (142)
    on left: 169, on right: 161 164
@18 (143)
    on left: 167, on right: 169
@19 (144)
    on left: 168, on right: 169
args (145)
    on left: 171 172, on right: 169
@20 (146)
    on left: 170, on right: 171
arglist (147)
    on left: 173 174, on right: 171 172 174
arg (148)
    on left: 175 176 177 178 179 180 181 182 183 184 185 186 187,
    on right: 173 174
file (149)
    on left: 188 189, on right: 182 183 184 185 186 187
immed (150)
    on left: 190 191, on right: 126
inspect (151)
    on left: 192, on right: 127
osesc (152)
    on left: 193, on right: 128
popstk (153)
    on left: 194, on right: 129
if (154)
    on left: 195, on right: 130
if_stat (155)
    on left: 197, on right: 195 199
@21 (156)
    on left: 196, on right: 197
ifelse (157)
    on left: 199, on right: 131
@22 (158)
    on left: 198, on right: 199
while (159)
    on left: 202, on right: 132
@23 (160)
    on left: 200, on right: 202
@24 (161)
    on left: 201, on right: 202
for (162)
    on left: 206, on right: 133
@25 (163)
    on left: 203, on right: 206
@26 (164)
    on left: 204, on right: 206
@27 (165)
    on left: 205, on right: 206
xassign (166)
    on left: 207 208, on right: 206
xexpr (167)
    on left: 209 210, on right: 206
switch (168)
    on left: 212, on right: 134
@28 (169)
    on left: 211, on right: 212
case (170)
    on left: 215, on right: 135
@29 (171)
    on left: 213, on right: 215
@30 (172)
    on left: 214, on right: 215
default (173)
    on left: 217, on right: 136
@31 (174)
    on left: 216, on right: 217
next (175)
    on left: 218, on right: 137
break (176)
    on left: 219, on right: 138
return (177)
    on left: 220 221, on right: 140
end_stmt (178)
    on left: 222, on right: 16
label_stmt (179)
    on left: 224, on right: 141
@32 (180)
    on left: 223, on right: 224
goto (181)
    on left: 225, on right: 139
nullstmt (182)
    on left: 226 227, on right: 142
xstmt (183)
    on left: 229 230 231, on right: 4 149 197 199 202 212 215 217 224
@33 (184)
    on left: 228, on right: 229
const_expr_list (185)
    on left: 232 233, on right: 215 233
const_expr (186)
    on left: 234, on right: 232 233
opnl (187)
    on left: 235 236, on right: 16 86 87 88 89 90 91 92 93 94 95 96
    97 98 99 100 147 149 165 166 197 199 202 206 212 215 217 224
ref (188)
    on left: 237 239, on right: 78 150 151 153 177 178 179 191 192
    244
@34 (189)
    on left: 238, on right: 239
index_list (190)
    on left: 240 242, on right: 239 242
@35 (191)
    on left: 241, on right: 242
index (192)
    on left: 243 244 245 246, on right: 240 242
intrins (193)
    on left: 247, on right: 113
param (194)
    on left: 248, on right: 18 23 24 54 55 180 181 189 237 239
tasknam (195)
    on left: 249, on right: 169
EOST (196)
    on left: 250 251, on right: 10 18 29 33 124 125 126 127 128 129
    137 138 139 140
DELIM (197)
    on left: 252, on right: 24 45 58 62 70 74 106 110 119 122 171 174
    233 242
BARG (198)
    on left: 253 254, on right: 169
EARG (199)
    on left: 255 256, on right: 169
LP (200)
    on left: 257, on right: 20 64 85 104 106 108 110 112 197 202 206
    212 254
RP (201)
    on left: 258, on right: 20 64 85 104 106 108 110 112 197 202 206
    212 256
NL (202)
    on left: 259, on right: 2 7 31 76 144 222 227 231 236 250


state 0

    0 $accept: . block $end

    error        shift, and go to state 1
    Y_PROCEDURE  shift, and go to state 2
    Y_BEGIN      shift, and go to state 3
    '.'          shift, and go to state 4

    $end       reduce using rule 1 (block)
    error      [reduce using rule 1 (block)]
    Y_OSESC    reduce using rule 1 (block)
    D_D        reduce using rule 1 (block)
    D_PEEK     reduce using rule 1 (block)
    Y_IDENT    reduce using rule 1 (block)
    Y_WHILE    reduce using rule 1 (block)
    Y_IF       reduce using rule 1 (block)
    Y_FOR      reduce using rule 1 (block)
    Y_BREAK    reduce using rule 1 (block)
    Y_NEXT     reduce using rule 1 (block)
    Y_SWITCH   reduce using rule 1 (block)
    Y_CASE     reduce using rule 1 (block)
    Y_DEFAULT  reduce using rule 1 (block)
    Y_RETURN   reduce using rule 1 (block)
    Y_GOTO     reduce using rule 1 (block)
    Y_BOOL     reduce using rule 1 (block)
    Y_INT      reduce using rule 1 (block)
    Y_REAL     reduce using rule 1 (block)
    Y_STRING   reduce using rule 1 (block)
    Y_FILE     reduce using rule 1 (block)
    Y_STRUCT   reduce using rule 1 (block)
    Y_GCUR     reduce using rule 1 (block)
    Y_IMCUR    reduce using rule 1 (block)
    Y_UKEY     reduce using rule 1 (block)
    Y_PSET     reduce using rule 1 (block)
    '='        reduce using rule 1 (block)
    '~'        reduce using rule 1 (block)
    '{'        reduce using rule 1 (block)
    ';'        reduce using rule 1 (block)

    block          go to state 5
    script_params  go to state 6
    script_body    go to state 7
    proc_stmt      go to state 8
    begin_stmt     go to state 9


state 1

    7 block: error . NL

    Y_NEWLINE  shift, and go to state 10

    NL  go to state 11


state 2

   18 proc_stmt: Y_PROCEDURE . @4 param bparam_list EOST

    $default  reduce using rule 17 (@4)

    @4  go to state 12


state 3

   76 begin_stmt: Y_BEGIN . NL

    Y_NEWLINE  shift, and go to state 10

    NL  go to state 13


state 4

    2 block: '.' . NL

    Y_NEWLINE  shift, and go to state 10

    NL  go to state 14


state 5

    0 $accept: block . $end
    4 block: block . @1 debug xstmt

    $end  shift, and go to state 15

    $default  reduce using rule 3 (@1)

    @1  go to state 16


state 6

    5 block: script_params .

    $default  reduce using rule 5 (block)


state 7

    6 block: script_body .

    $default  reduce using rule 6 (block)


state 8

   14 script_params: proc_stmt . var_decls begin_stmt

    error      shift, and go to state 17
    Y_NEWLINE  shift, and go to state 10
    Y_BOOL     shift, and go to state 18
    Y_INT      shift, and go to state 19
    Y_REAL     shift, and go to state 20
    Y_STRING   shift, and go to state 21
    Y_FILE     shift, and go to state 22
    Y_STRUCT   shift, and go to state 23
    Y_GCUR     shift, and go to state 24
    Y_IMCUR    shift, and go to state 25
    Y_UKEY     shift, and go to state 26
    Y_PSET     shift, and go to state 27
    ';'        shift, and go to state 28

    Y_BEGIN  reduce using rule 25 (var_decls)

    var_decls       go to state 29
    var_decl_block  go to state 30
    var_decl_line   go to state 31
    var_decl_stmt   go to state 32
    typedefs        go to state 33
    EOST            go to state 34
    NL              go to state 35


state 9

   16 script_body: begin_stmt . @3 s_list opnl end_stmt

    $default  reduce using rule 15 (@3)

    @3  go to state 36


state 10

  259 NL: Y_NEWLINE .

    $default  reduce using rule 259 (NL)


state 11

    7 block: error NL .

    $default  reduce using rule 7 (block)


state 12

   18 proc_stmt: Y_PROCEDURE @4 . param bparam_list EOST

    Y_IDENT  shift, and go to state 37

    param  go to state 38


state 13

   76 begin_stmt: Y_BEGIN NL .

    $default  reduce using rule 76 (begin_stmt)


state 14

    2 block: '.' NL .

    $default  reduce using rule 2 (block)


state 15

    0 $accept: block $end .

    $default  accept


state 16

    4 block: block @1 . debug xstmt

    D_D     shift, and go to state 39
    D_PEEK  shift, and go to state 40
    '~'     shift, and go to state 41

    $default  reduce using rule 8 (debug)

    debug  go to state 42
    D_XXX  go to state 43


state 17

   31 var_decl_line: error . NL

    Y_NEWLINE  shift, and go to state 10

    NL  go to state 44


state 18

   34 typedefs: Y_BOOL .

    $default  reduce using rule 34 (typedefs)


state 19

   42 typedefs: Y_INT .

    $default  reduce using rule 42 (typedefs)


state 20

   36 typedefs: Y_REAL .

    $default  reduce using rule 36 (typedefs)


state 21

   35 typedefs: Y_STRING .

    $default  reduce using rule 35 (typedefs)


state 22

   37 typedefs: Y_FILE .

    $default  reduce using rule 37 (typedefs)


state 23

   43 typedefs: Y_STRUCT .

    $default  reduce using rule 43 (typedefs)


state 24

   38 typedefs: Y_GCUR .

    $default  reduce using rule 38 (typedefs)


state 25

   39 typedefs: Y_IMCUR .

    $default  reduce using rule 39 (typedefs)


state 26

   40 typedefs: Y_UKEY .

    $default  reduce using rule 40 (typedefs)


state 27

   41 typedefs: Y_PSET .

    $default  reduce using rule 41 (typedefs)


state 28

  251 EOST: ';' .

    $default  reduce using rule 251 (EOST)


state 29

   14 script_params: proc_stmt var_decls . begin_stmt

    Y_BEGIN  shift, and go to state 3

    begin_stmt  go to state 45


state 30

   26 var_decls: var_decl_block .
   28 var_decl_block: var_decl_block . var_decl_line

    error      shift, and go to state 17
    Y_NEWLINE  shift, and go to state 10
    Y_BOOL     shift, and go to state 18
    Y_INT      shift, and go to state 19
    Y_REAL     shift, and go to state 20
    Y_STRING   shift, and go to state 21
    Y_FILE     shift, and go to state 22
    Y_STRUCT   shift, and go to state 23
    Y_GCUR     shift, and go to state 24
    Y_IMCUR    shift, and go to state 25
    Y_UKEY     shift, and go to state 26
    Y_PSET     shift, and go to state 27
    ';'        shift, and go to state 28

    Y_BEGIN  reduce using rule 26 (var_decls)

    var_decl_line  go to state 46
    var_decl_stmt  go to state 32
    typedefs       go to state 33
    EOST           go to state 34
    NL             go to state 35


state 31

   27 var_decl_block: var_decl_line .

    $default  reduce using rule 27 (var_decl_block)


state 32

   30 var_decl_line: var_decl_stmt .

    $default  reduce using rule 30 (var_decl_line)


state 33

   33 var_decl_stmt: typedefs . @5 var_decl_list EOST

    $default  reduce using rule 32 (@5)

    @5  go to state 47


state 34

   29 var_decl_line: EOST .

    $default  reduce using rule 29 (var_decl_line)


state 35

  250 EOST: NL .

    $default  reduce using rule 250 (EOST)


state 36

   16 script_body: begin_stmt @3 . s_list opnl end_stmt

    $default  reduce using rule 148 (s_list)

    s_list  go to state 48


state 37

  248 param: Y_IDENT .

    $default  reduce using rule 248 (param)


state 38

   18 proc_stmt: Y_PROCEDURE @4 param . bparam_list EOST

    '('  shift, and go to state 49

    $default  reduce using rule 19 (bparam_list)

    bparam_list  go to state 50
    LP           go to state 51


state 39

   11 D_XXX: D_D .

    $default  reduce using rule 11 (D_XXX)


state 40

   12 D_XXX: D_PEEK . Y_CONSTANT

    Y_CONSTANT  shift, and go to state 52


state 41

   13 D_XXX: '~' .

    $default  reduce using rule 13 (D_XXX)


state 42

    4 block: block @1 debug . xstmt

    error     shift, and go to state 53
    Y_BOOL    shift, and go to state 18
    Y_INT     shift, and go to state 19
    Y_REAL    shift, and go to state 20
    Y_STRING  shift, and go to state 21
    Y_FILE    shift, and go to state 22
    Y_STRUCT  shift, and go to state 23
    Y_GCUR    shift, and go to state 24
    Y_IMCUR   shift, and go to state 25
    Y_UKEY    shift, and go to state 26
    Y_PSET    shift, and go to state 27

    Y_OSESC    reduce using rule 228 (@33)
    Y_IDENT    reduce using rule 228 (@33)
    Y_WHILE    reduce using rule 228 (@33)
    Y_IF       reduce using rule 228 (@33)
    Y_FOR      reduce using rule 228 (@33)
    Y_BREAK    reduce using rule 228 (@33)
    Y_NEXT     reduce using rule 228 (@33)
    Y_SWITCH   reduce using rule 228 (@33)
    Y_CASE     reduce using rule 228 (@33)
    Y_DEFAULT  reduce using rule 228 (@33)
    Y_RETURN   reduce using rule 228 (@33)
    Y_GOTO     reduce using rule 228 (@33)
    '='        reduce using rule 228 (@33)
    '{'        reduce using rule 228 (@33)
    ';'        reduce using rule 228 (@33)

    var_decl_stmt  go to state 54
    typedefs       go to state 33
    xstmt          go to state 55
    @33            go to state 56


state 43

   10 debug: D_XXX . EOST @2 debug

    Y_NEWLINE  shift, and go to state 10
    ';'        shift, and go to state 28

    EOST  go to state 57
    NL    go to state 35


state 44

   31 var_decl_line: error NL .

    $default  reduce using rule 31 (var_decl_line)


state 45

   14 script_params: proc_stmt var_decls begin_stmt .

    $default  reduce using rule 14 (script_params)


state 46

   28 var_decl_block: var_decl_block var_decl_line .

    $default  reduce using rule 28 (var_decl_block)


state 47

   33 var_decl_stmt: typedefs @5 . var_decl_list EOST

    Y_IDENT  shift, and go to state 37
    '*'      shift, and go to state 58

    var_decl_list  go to state 59
    var_decl_plus  go to state 60
    var_decl       go to state 61
    var_def        go to state 62
    var_name       go to state 63
    param          go to state 64


state 48

   16 script_body: begin_stmt @3 s_list . opnl end_stmt
  149 s_list: s_list . opnl xstmt

    Y_NEWLINE  shift, and go to state 10

    $default  reduce using rule 235 (opnl)

    opnl  go to state 65
    NL    go to state 66


state 49

  257 LP: '(' .

    $default  reduce using rule 257 (LP)


state 50

   18 proc_stmt: Y_PROCEDURE @4 param bparam_list . EOST

    Y_NEWLINE  shift, and go to state 10
    ';'        shift, and go to state 28

    EOST  go to state 67
    NL    go to state 35


state 51

   20 bparam_list: LP . param_list RP

    Y_IDENT  shift, and go to state 37

    $default  reduce using rule 21 (param_list)

    param_list   go to state 68
    xparam_list  go to state 69
    param        go to state 70


state 52

   12 D_XXX: D_PEEK Y_CONSTANT .

    $default  reduce using rule 12 (D_XXX)


state 53

  231 xstmt: error . NL

    Y_NEWLINE  shift, and go to state 10

    NL  go to state 71


state 54

  230 xstmt: var_decl_stmt .

    $default  reduce using rule 230 (xstmt)


state 55

    4 block: block @1 debug xstmt .

    $default  reduce using rule 4 (block)


state 56

  229 xstmt: @33 . stmt

    Y_OSESC    shift, and go to state 72
    Y_IDENT    shift, and go to state 73
    Y_WHILE    shift, and go to state 74
    Y_IF       shift, and go to state 75
    Y_FOR      shift, and go to state 76
    Y_BREAK    shift, and go to state 77
    Y_NEXT     shift, and go to state 78
    Y_SWITCH   shift, and go to state 79
    Y_CASE     shift, and go to state 80
    Y_DEFAULT  shift, and go to state 81
    Y_RETURN   shift, and go to state 82
    Y_GOTO     shift, and go to state 83
    '='        shift, and go to state 84
    '{'        shift, and go to state 85
    ';'        shift, and go to state 86

    stmt        go to state 87
    c_stmt      go to state 88
    c_blk       go to state 89
    assign      go to state 90
    equals      go to state 91
    cmdlist     go to state 92
    command     go to state 93
    immed       go to state 94
    inspect     go to state 95
    osesc       go to state 96
    popstk      go to state 97
    if          go to state 98
    if_stat     go to state 99
    ifelse      go to state 100
    while       go to state 101
    for         go to state 102
    switch      go to state 103
    case        go to state 104
    default     go to state 105
    next        go to state 106
    break       go to state 107
    return      go to state 108
    label_stmt  go to state 109
    goto        go to state 110
    nullstmt    go to state 111
    ref         go to state 112
    param       go to state 113
    tasknam     go to state 114


state 57

   10 debug: D_XXX EOST . @2 debug

    $default  reduce using rule 9 (@2)

    @2  go to state 115


state 58

   55 var_name: '*' . param

    Y_IDENT  shift, and go to state 37

    param  go to state 116


state 59

   33 var_decl_stmt: typedefs @5 var_decl_list . EOST

    Y_NEWLINE  shift, and go to state 10
    ';'        shift, and go to state 28

    EOST  go to state 117
    NL    go to state 35


state 60

   44 var_decl_list: var_decl_plus .
   45              | var_decl_plus . DELIM var_decl_list

    ','  shift, and go to state 118

    $default  reduce using rule 44 (var_decl_list)

    DELIM  go to state 119


state 61

   46 var_decl_plus: var_decl .
   47              | var_decl . '{' options_list ';' '}'

    '{'  shift, and go to state 120

    $default  reduce using rule 46 (var_decl_plus)


state 62

   48 var_decl: var_def .
   50         | var_def . '=' @6 init_list

    '='  shift, and go to state 121

    $default  reduce using rule 48 (var_decl)


state 63

   51 var_def: var_name .
   53        | var_name . @7 '[' init_index_list ']'

    '['       reduce using rule 52 (@7)
    $default  reduce using rule 51 (var_def)

    @7  go to state 122


state 64

   54 var_name: param .

    $default  reduce using rule 54 (var_name)


state 65

   16 script_body: begin_stmt @3 s_list opnl . end_stmt
  149 s_list: s_list opnl . xstmt

    error     shift, and go to state 53
    Y_END     shift, and go to state 123
    Y_BOOL    shift, and go to state 18
    Y_INT     shift, and go to state 19
    Y_REAL    shift, and go to state 20
    Y_STRING  shift, and go to state 21
    Y_FILE    shift, and go to state 22
    Y_STRUCT  shift, and go to state 23
    Y_GCUR    shift, and go to state 24
    Y_IMCUR   shift, and go to state 25
    Y_UKEY    shift, and go to state 26
    Y_PSET    shift, and go to state 27

    Y_OSESC    reduce using rule 228 (@33)
    Y_IDENT    reduce using rule 228 (@33)
    Y_WHILE    reduce using rule 228 (@33)
    Y_IF       reduce using rule 228 (@33)
    Y_FOR      reduce using rule 228 (@33)
    Y_BREAK    reduce using rule 228 (@33)
    Y_NEXT     reduce using rule 228 (@33)
    Y_SWITCH   reduce using rule 228 (@33)
    Y_CASE     reduce using rule 228 (@33)
    Y_DEFAULT  reduce using rule 228 (@33)
    Y_RETURN   reduce using rule 228 (@33)
    Y_GOTO     reduce using rule 228 (@33)
    '='        reduce using rule 228 (@33)
    '{'        reduce using rule 228 (@33)
    ';'        reduce using rule 228 (@33)

    var_decl_stmt  go to state 54
    typedefs       go to state 33
    end_stmt       go to state 124
    xstmt          go to state 125
    @33            go to state 56


state 66

  236 opnl: NL .
